@@ -19,6 +19,7 @@
 package com.beust.jcommander.internal;
 
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 public class Maps {
@@ -26,4 +27,9 @@ public class Maps {
   public static <K, V> Map<K,V> newHashMap() {
     return new HashMap<K, V>();
   }
+
+  public static <K, V> Map<K,V> newLinkedHashMap() {
+    return new LinkedHashMap<K, V>();
+  }
+
 }
